@@ -22,8 +22,8 @@ public class PokemonZookeeperBeanFactoryPostProcessor implements BeanFactoryPost
     
     @Override
     public void postProcessBeanFactory(ConfigurableListableBeanFactory beanFactory) throws BeansException {
-        List<String> workerNames = Arrays.asList(beanFactory.getBeanNamesForType(ZooWorker.class));
-        List<String> pokemonNames = Arrays.asList(beanFactory.getBeanNamesForType(Pokemon.class));
+        List<String> workerNames = List.of(beanFactory.getBeanNamesForType(ZooWorker.class));
+        List<String> pokemonNames = List.of(beanFactory.getBeanNamesForType(Pokemon.class));
         
         RootBeanDefinition book = (RootBeanDefinition) BeanDefinitionBuilder.rootBeanDefinition(PokemonKeeperBook.class)
             .addConstructorArgValue(pokemonNames)
